--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka:2.9.0'
     implementation 'org.postgresql:postgresql:42.5.1'
     implementation 'com.h2database:h2:2.1.214'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin
+    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.14.1'
+
 
     implementation group: 'org.telegram', name: 'telegrambots-abilities', version: '5.3.0'
     implementation group: 'org.telegram', name: 'telegrambots', version: '5.3.0'
